assets/main.scss
---
---

body {

  $border: 1px solid black;
  $content_width: 800px;
  $content_separator_width: 5px;
  $sidebar_width: 160px;
    $content_and_sidebar_width: $content_width + $content_separator_width + $sidebar_width;
  $content_background_color: white;
  $link_color: #28F;
  $link_hover_color: red;
  $mobile_width: 500px;

  @mixin content {
    background-color: $content_background_color;
    border: $border;
    @media (max-width: $content_width) {
      border-left-width: 0;
      border-right-width: 0;
    }
    margin: 0 0 $content_separator_width;
    max-width: $content_width;
    padding: 5px 15px 10px;
    position: relative;
  }

  @mixin content_h1 {
    font-size: 3em;
    font-weight: bold;
    margin-bottom: 0.5em;
    margin-top: 5px;
  }

  @mixin media_medium_content_width {
    @media (max-width: $content_and_sidebar_width) {
      max-width: $content_width;
    }
  }

  background-color: #252525;
  margin: 0px;
  overflow-wrap: break-word;

  nav.navbar {
    background-color: black;
    border-width: 0;
    font-size: 1.3em;
    margin: 0;
    border-radius: 0;
    a.navbar-brand {
      font-size: 1.3em;
    }
    div.container-fluid {
      @include media_medium_content_width;
      margin: 0px auto;
      max-width: $content_and_sidebar_width;
      padding: 0px 15px;
      text-align: left;
      .navbar-toggle {
        border-color: $link_color;
        .icon-bar {
          background-color: $link_color;
        }
        &:hover {
        border-color: $link_color;
          background-color: gray;
          border-color: black;
          .icon-bar {
            background-color: black;
          }
        }
      }
      ul.nav a {
        color: $link_color;
      }
      ul.nav a,
      a.navbar-brand {
        &:hover {
          background-color: gray;
          color: black;
        }
      }
      ul.nav li.active a {
        background-color: gray;
        color: black;
      }
      a.navbar-brand{
        color: #AAA;
        font-weight: bold;
      }
    }
  }

  .article-and-sidebar {
    margin: 0 auto;
    max-width: $content_and_sidebar_width;
    @include media_medium_content_width;
    .content {
      @include content;

      #markdown-toc {
        font-weight: bold;
      }

      a:link {
        color: $link_color;
      }
      a:visited {
        color: purple;
      }
      blockquote {
        font-size: 1.2em;
      }
      code {
        color: black;
      }
      h1, h2, h3, h4, h5, h6 {
        border-bottom: $border;
        margin-bottom: 0.25em 0;
        padding-bottom: 0.15em;
      }
      h2, h3, h4, h5, h6 {
        /*
        To prevent an empty line on headings. This is too likely to happen on small screens,
        and the user usually does not have a mouse to hover in that case.
        */
        @media (max-width: $mobile_width) {
          .header-link {
            display: none;
          }
        }
        .header-link {
          opacity: 0;
          font-size: 0.8em;
        }
        &:hover .header-link {
          opacity: 1;
        }
      }
      h1 {
        @include content_h1;
      }
      h2 {
        font-size: 2.8em;
      }
      h3 {
        font-size: 2.0em;
      }
      h4 {
        font-size: 1.4em;
      }
      h5 {
        font-size: 1em;
      }
      h6 {
        font-size: 0.8em;
      }
      p {
        /* Otherwise paragraphs after *nested* lists are too close. TODO why? */
        margin-top: 5px;
      }
      ul, ol {
        /*list-style-position:inside;*/
        margin-left: 14px;
        padding-left: 14px;
      }
      @media (max-width: $mobile_width) {
        ul, ol {
          margin-left: 0;
        }
      }
      table {
        border-collapse: collapse;
        border: $border;
        margin-bottom: 15px;
        text-align: left;
      }
      table tr > :not(:last-child) {
        white-space: nowrap;
        width: 1px;
      }
      td, th {
        border: $border;
        padding: 2px 4px;
      }
      th {
        font-weight: bold;
      }
      pre {
        margin-left: 0px;
        white-space: pre;
      }

      aside {
        background-color: $content_background_color;
        border-left: $border;
        border-right: $border;
        border-bottom: $border;
        float: right;
        left: 100%;
        margin: 0px $content_separator_width;
        position: absolute;
        top: 0%;
        vertical-align: top;
        width: $sidebar_width;
        > div:not(:last-child) {
          border-bottom: $border;
        }
        .nav {
          display: block;
          font-weight: bold;
          text-align: left;
          padding: 5px 0 5px 10px;
        }
        .nav > :first-child {
          font-size: 20px;
          margin-right: 2px;
          vertical-align: top;
        }
        a.nav {
          font-weight: bold;
          &:link,
          &:visited {
            color: $link_color;
          }
          i {
            &.fa-code-fork {
              color: black;
            }
            &.fa-exclamation-circle {
              color: red;
            }
            &.fa-envelope-o {
              color: black;
            }
            &.fa-github {
              color: black;
            }
            &.fa-skype {
              color: green;
            }
            &.fa-stack-overflow {
              color: DarkOrange;
            }
            &.fa-twitter {
              color: $link_color;
            }
          }
        }
        @media (max-width: $content_and_sidebar_width) {
          display: none;
        }
      }
    }
  }

  .comments {
    @include content;
    border-bottom: none;
    margin-bottom: 0px;
    .title {
      @include content_h1;
    }
  }

  #sharethis {
    margin-bottom: 1em;
    @media (max-width: $mobile_width) {
      .desktop {
        display: none;
      }
    }
    @media (min-width: $mobile_width + 1) {
      .mobile {
        display: none;
      }
    }
    & > {
      div, iframe {
        height: 25px;
        display: inline-block;
        vertical-align: top;
      }
    }
    /* Breaks with bootstrap without this: http://stackoverflow.com/questions/18165901/twitters-bootstrap-3-with-sharethis-widget*/
    span {
      -webkit-box-sizing: content-box;
      -moz-box-sizing: content-box;
      box-sizing: content-box;
    }
  }

  /* Section */

  .patches-table tr {
    > :nth-child(1),
    > :nth-child(3) {
      text-align: center;
    }
  }
  #bugs-table tr > :nth-child(1) {
    text-align: center;
  }
  #grading-table tr > :nth-child(1) {
    font-weight: bold;
    text-align: center;
    padding-left: 8px;
    padding-right: 8px;
  }
  #languages-table tr > :nth-child(1) {
    text-align: center;
  }
  #other-tech-table tr > :nth-child(1) {
    text-align: center;
  }
  #natural-languages-table tr > :nth-child(1) {
    text-align: center;
  }
}

